--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 
 <head>
     <title>Material Anki flashcard</title>
-    <link rel="stylesheet" href="./styles/_page.css" />
-    <link rel="stylesheet" href="./styles/base.css" />
-    <link rel="stylesheet" href="./styles/variants.css" />
-    <link rel="stylesheet" href="./styles/elements.css" />
-    <link rel="stylesheet" href="./styles/audio.css" />
+    <link rel="icon" type="image/x-icon" href="./src/assets/favicon.ico">
+    <link rel="stylesheet" href="./src/styles/_page.css" />
+    <link rel="stylesheet" href="./src/styles/base.css" />
+    <link rel="stylesheet" href="./src/styles/variants.css" />
+    <link rel="stylesheet" href="./src/styles/elements.css" />
+    <link rel="stylesheet" href="./src/styles/audio.css" />
 </head>
 
 <body>
@@ -421,7 +422,7 @@
             </div>
         </div>
     </div>
-    <script src="./js/main.js"></script>
+    <script src="./src/js/main.js"></script>
 </body>
 
 </html>
