--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-    <title>Material Anki flashcard</title>
+    <title>Material Notes — Anki Add-on</title>
     <link rel="icon" type="image/x-icon" href="./src/assets/favicon.ico">
     <link rel="stylesheet" href="./src/styles/_page.css" />
     <link rel="stylesheet" href="./src/styles/base.css" />
@@ -12,7 +12,7 @@
 
 <body>
     <div class="card front-side">
-        <h1>Material Anki flashcard</h1>
+        <h1>Material Notes — Anki Add-on</h1>
 
         <div class="settings note">
             <div class="form">
