--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="settings note">
             <div class="form">
                 <div class="input-group">
-                    <button id="dark" title="Dark mode" onclick="toggleTheme()">
+                    <button id="dark" class="btn-icon" title="Dark mode" onclick="toggleTheme()">
                         <svg width="15" height="15" viewBox="0 0 16 16" fill="currentColor"
                             xmlns="http://www.w3.org/2000/svg">
                             <path
@@ -29,14 +29,14 @@
                             <path d="M11.5 7.00003L9 4.50003L11.5 2.00003L14 4.50003L11.5 7.00003Z"></path>
                         </svg>
                     </button>
-                    <button id="side" title="Toggle side" onclick="toggleSide()">
-                        <svg width="20" height="20" fill="currentColor" viewBox="0 0 56 56" transform="rotate(90)">
+                    <button id="side" class="btn-icon" title="Toggle side" onclick="toggleSide()">
+                        <svg width="20" height="20" fill="currentColor" viewBox="0 0 56 56">
                             <path
                                 d="M 13.7851 49.5742 L 42.2382 49.5742 C 47.1366 49.5742 49.5743 47.1367 49.5743 42.3086 L 49.5743 13.6914 C 49.5743 8.8633 47.1366 6.4258 42.2382 6.4258 L 13.7851 6.4258 C 8.9101 6.4258 6.4257 8.8398 6.4257 13.6914 L 6.4257 42.3086 C 6.4257 47.1602 8.9101 49.5742 13.7851 49.5742 Z M 42.1679 10.1992 C 44.4882 10.1992 45.8007 11.4414 45.8007 13.8789 L 45.8007 42.1211 C 45.8007 44.5586 44.4882 45.8008 42.1679 45.8008 L 28.0117 45.8008 L 28.0117 10.1992 Z">
                             </path>
                         </svg>
                     </button>
-                    <button id="centered" onclick="toggleCentered()" title="Toggle Centered">
+                    <button id="centered" class="btn-icon" onclick="toggleCentered()" title="Toggle Centered">
                         <svg width="15" height="15" fill="currentColor" viewBox="0 0 52 52" xml:space="preserve">
                             <path
                                 d="M48,6.5C48,5.7,47.3,5,46.5,5h-41C4.7,5,4,5.7,4,6.5v3C4,10.3,4.7,11,5.5,11h41c0.8,0,1.5-0.7,1.5-1.5V6.5z">
