--- a/index.html
+++ b/index.html
@@ -7,10 +7,8 @@
     <title>Material Notes — Anki Add-on</title>
     <link rel="icon" type="image/x-icon" href="./src/assets/favicon.ico">
     <link rel="stylesheet" href="./src/styles/_page.css" />
-    <link rel="stylesheet" href="./src/styles/base.css" />
-    <link rel="stylesheet" href="./src/styles/variants.css" />
-    <link rel="stylesheet" href="./src/styles/elements.css" />
-    <link rel="stylesheet" href="./src/styles/audio.css" />
+    <link rel="stylesheet" href="./models/styles.css" />
+
 </head>
 
 <body>
